--- a/_posts/2019-12-27-the-us-narrative-today.html
+++ b/_posts/2019-12-27-the-us-narrative-today.html
@@ -1568,107 +1568,107 @@ stories:
   domain: http://themountainmail.com/
   link: http://www.themountainmail.com/free_content/image_1034fb82-28ce-11ea-9737-831718499e65.html
 images:
-- name: mistywoods-babyfoot-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-dry-skin.jpg
-- name: razorwire-DSC-0080-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-yellow-collage.jpg
-- name: aws-s3-stories-36349140070-d5ec39cb34-z.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-36349140070-d5ec39cb34-z.jpg
-- name: nyc-flag-nycflag-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-blue-granite.jpg
-- name: nazi-invasion-berline-wall-old-building.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-berline-wall-old-building.jpg
-- name: statue-of-liberty-front-view-statueofliberty-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-aqua.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-dark-rain.jpg
-- name: oldcabin-store-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-sand-paper.jpg
-- name: oldcabin-store-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-constitution.jpg
-- name: containership-containership-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-crunch-paper.jpg
-- name: copper-circuit-old-man-crossing-border.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-man-crossing-border.jpg
-- name: ellis-island-ellis-island-room-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-umberto-bocc.jpg
-- name: gypsy-wagon-gypsywagon-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-rainbow-festival.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-dali-three.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-dali-three.JPG
-- name: oldhousecars-house-old-cars-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-emily-carr.jpg
-- name: blossombar-crafty-painting-file-00-00-50-18.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-18.jpg
-- name: statue-of-liberty-front-view-statueofliberty-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-post-modern.jpg
-- name: school-clouds-church-clouds-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-satan-red.jpg
-- name: nyc-flag-nycflag-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-plentiful.jpg
-- name: bluelake-dark-rain-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-dark-rain-file-00-00-38-67.jpg
-- name: oldroad-old-road-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-post-modern.jpg
-- name: ellis-island-ellisisland-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-dali-three.jpg
-- name: store-on-corner-store-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-purple-pond.jpg
-- name: gypsymosaic-gypsy-eyes-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-graham-sutherland.jpg
-- name: eduardo-eduardo-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-hot-spicy.jpg
-- name: store-on-corner-oldcabin-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-gan-vogh.jpg
-- name: powerlines-power-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-monet-one.jpg
-- name: old-church-oldchurch-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-atari-missle.jpg
-- name: old-granary-field-granaryfield-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-dark-soul.jpg
-- name: stalin-time-ship-bird-foreground.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-ship-bird-foreground.jpg
-- name: blossombar-purple-pond-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purple-pond-file-00-00-50-62.jpg
-- name: rockingchair-rockingchair-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-clean-view.jpg
-- name: catacombs-catacombs-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-plentiful.jpg
-- name: crow_purp_paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_purp_paper.jpg
-- name: powerlines-power-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-atari-missle.jpg
-- name: stalin-time-shipping-container-yard-police-boat.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-shipping-container-yard-police-boat.jpg
-- name: capital-dc-flag-side-view-norman-rockwell-ruby-bridges.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-dc-flag-side-view-norman-rockwell-ruby-bridges.jpg
-- name: powerlines-power-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-space-pizza.jpg
-- name: old-granary-field-oldhouse-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-pablo-blue.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-far-away.jpg
-- name: catacombs-catacombs-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-graham-sutherland.jpg
-- name: flower-barbed-wire-flower-barbed-wire-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-free-woman.jpg
-- name: nyc-flag-nycflag-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-green-zuma.jpg
-- name: downtheline-downtheline-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-blue-granite.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-sunday.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-sunday.png
-- name: blossombar-spagetti-accident-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-spagetti-accident-file-00-00-50-62.jpg
-- name: statue-of-liberty-front-view-statueofliberty-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-space-pizza.jpg
-- name: mosaic-face-mosaic-face-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-really-hot.jpg
-- name: server-cloud-server-racks-door-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-pablo-blue.jpg
-- name: copper-circuit-seattle-looking-north.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-seattle-looking-north.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-constitution.jpg
+- name: nazi-invasion-fishing-ship-in-docks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-fishing-ship-in-docks.jpg
+- name: store-on-corner-store-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-satan-red.jpg
+- name: oldhousecars-house-old-cars-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-ww2-dresden.jpg
+- name: yosemite-yosemite-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-matrix.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-mucha-mult.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-mucha-mult.png
+- name: carry-load-carryload-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-dali-two.jpg
+- name: crow-crow-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-graham-sutherland.jpg
+- name: blossombar-colorful-dream-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-colorful-dream-file-00-00-50-62.jpg
+- name: copper-circuit-subway-underground_36599191851_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-subway-underground_36599191851_o.jpg
+- name: birdhouse-birdhouse-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-neo-instinct.jpg
+- name: paris-paris-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-diego-rivera1.jpg
+- name: braceros-domingo-ulloa-high-speed-train-station-france.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-high-speed-train-station-france.jpg
+- name: nazi-invasion-destruction-seattle-viaduct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-destruction-seattle-viaduct.jpg
+- name: gypsy-wagon-gypsywagon-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-atari-asteroids.jpg
+- name: art-museum-art-museum-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-cinnamon-rolls.jpg
+- name: statue-of-liberty-front-view-statueofliberty-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-sunday.jpg
+- name: stories-new-57-64-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-57-64-800-500-0-max-0--5--5.jpg
+- name: downtown-los-angeles-downtown-la-blue-brush.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-blue-brush.JPG
+- name: castle-on-hill-castle-on-hill-edinburgh-marcel-duchamp.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-marcel-duchamp.JPG
+- name: art-museum-art-museum-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-graham-sutherland.jpg
+- name: beach-rocks-beach-rocks-currents-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-creativity.jpg
+- name: crow_diego_rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_diego_rivera1.jpg
+- name: udnie-IMG_6328.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_6328.jpg
+- name: server-cloud-server-racks-clouds-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dali-three.jpg
+- name: school-clouds-church-clouds-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-china-prop.jpg
+- name: stories-power-lines-empty-space-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-power-lines-empty-space-sunday.jpg
+- name: supreme-court-supremecourt-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-atari-asteroids.jpg
+- name: store-on-corner-store-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-constitution.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-graham-sutherland.jpg
+- name: docks-docks-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-pablo-blue.jpg
+- name: old-house-oldhouse-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-deep-connections.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-blue-granite.jpg
+- name: oldhouse-granaryfield-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-green-zuma.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-blue-circuit-4.jpg
+- name: death-valley-death-valley-national-park-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-emily-carr.jpg
+- name: crow_sand_paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_sand_paper.jpg
+- name: sand-hand-sand-hand-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-china-prop.jpg
+- name: adam-smith-adam-smith-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-smoking-cigarette.jpg
+- name: curtain-curtain-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-alberto-giacometti.jpg
+- name: blossombar-blossombar-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-blossombar-still.jpg
+- name: death-valley-death-valley-national-park-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-wols.jpg
+- name: bordercrossing-bordercrossing-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-neo-instinct.jpg
+- name: ellis-island-ellis-island-room-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-purple-storm.jpg
+- name: status-berlin-status-berlin-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-mucha-mult.jpg
+- name: old-granary-field-granaryfield-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-rainbow-festival.jpg
+- name: oldhousecars-house-old-cars-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-far-away.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-green-zuma.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-green-zuma.png
+- name: downtown-los-angeles-downtown-la-blue-granite.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-blue-granite.JPG
+- name: la-muse-gauge-on-aircraft-carrier.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-gauge-on-aircraft-carrier.jpg
+- name: aws-s3-square-C106VpCVQAEkHqy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C106VpCVQAEkHqy.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-green-zuma.jpg
 ---
 Online Marketing Creates Opportunities For Real Businesses.&nbsp;Pimento Pepper Still Hot For Hoosier Hoops.&nbsp;Long Wait List For Waiver Program Unacceptable.&nbsp;Vancouver Mayor Appointed To State Tax Structure Work Group.&nbsp;We Found Sound Postpones Shows.&nbsp;Winning Numbers Drawn In 'All Or Nothing Evening' Game.&nbsp;William Bill Calvin Farmer.&nbsp;For The Rest Of Us.&nbsp;
